force-app/main/default/objects/FLODocs__FLO_Test_Record__c/FLODocs__FLO_Test_Record__c.object-meta.xml
<CustomObject>
    <description>These records are used to track tests within the Strongpoint Documentation System</description>
    <label>Test Record</label>
    <nameField>
        <label>Test Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>