force-app/main/default/objects/FLODocs__FLO_Test_Record__c/fields/FLODocs__Data_Input_Fields__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Data_Input_Fields__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Data input to test - or to make any Regression, Exploratory test</description>
    <inlineHelpText>Data input to test - or to make any Regression, Exploratory test</inlineHelpText>
    <label>Data Input Fields</label>
    <referenceTo>FLODocs__FLO_Customization__c</referenceTo>
    <relationshipLabel>Test Records (Data Input Fields)</relationshipLabel>
    <relationshipName>FLO_Test_Records1</relationshipName>
    <type>Lookup</type>
</CustomField>