force-app/main/default/objects/FLODocs__FLO_Test_Record__c/fields/FLODocs__Expected_Outcome__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Expected_Outcome__c</fullName>
    <description>Expected outcome to be add manually for the test</description>
    <inlineHelpText>Expected outcome to be add manually for the test</inlineHelpText>
    <label>Expected Outcome</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>