force-app/main/default/objects/FLODocs__FLO_Test_Record__c/fields/FLODocs__ExternalId__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>