force-app/main/default/objects/FLODocs__FLO_Test_Record__c/fields/FLODocs__Parent_Test__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Parent_Test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the parent testing record.</description>
    <inlineHelpText>This is the parent testing record.</inlineHelpText>
    <label>Parent Test</label>
    <referenceTo>FLODocs__FLO_Test_Record__c</referenceTo>
    <relationshipLabel>Test Records</relationshipLabel>
    <relationshipName>FLO_Test_Records</relationshipName>
    <type>Lookup</type>
</CustomField>