force-app/main/default/objects/FLODocs__FLO_Test_Record__c/fields/FLODocs__Process__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the process being tested.</description>
    <inlineHelpText>This is the process being tested.</inlineHelpText>
    <label>Process</label>
    <referenceTo>FLODocs__FLO_Process__c</referenceTo>
    <relationshipLabel>Test Records</relationshipLabel>
    <relationshipName>FLO_Test_Records</relationshipName>
    <type>Lookup</type>
</CustomField>