force-app/main/default/objects/FLODocs__FLO_Test_Record__c/fields/FLODocs__Test_Type__c.field-meta.xml
<CustomField>
    <fullName>FLODocs__Test_Type__c</fullName>
    <description>This is the type of test being conducted.  New processes and customizations may go through repeated testing cycles. Unit testing is done by the implementer, developer or analyst who created the process or customization.  Beta testing is performed by the operational team to identify key issues. Acceptance is performed by the operational team to confirm all processes are resolved.  Quarterly and Annual Testing is performed by the operational team to confirm process compliance.</description>
    <inlineHelpText>This is the type of test being conducted.</inlineHelpText>
    <label>Test Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FLODocs__FLO_Test_Type</valueSetName>
    </valueSet>
</CustomField>